[package]
name = "ruactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
async-trait = "0.1"
backoff = "0.4"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
crossbeam = "0.8.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio-stream = "0.1.11"
uuid = { version = "1.2", features = ["v4"] }
warp = { version = "0.3" }
env_logger = "0.10"
dotenv = "0.15.0"
